--- a/gruppe_anzeigen.html
+++ b/gruppe_anzeigen.html
@@ -1,10 +1,295 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- JS-Libs -->
+    <script src="js/jquery-3.5.0.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="Style.css">
+
+
+    <title>Person bearbeiten</title>
 </head>
 <body>
-
+<!-- W3D on the top -->
+<div class="container">
+    <div class="row sticky-top">
+        <div class="col-12 text-center">
+            <a href="index.html" class="text-dark"><h1>W3D</h1></a>
+        </div>
+    </div>
+    <!-- Nav Bar -->
+    <div class="row ">
+        <div class="col-2">
+            <div class="nav flex-column nav-pills">
+                <a class="nav-link text-dark active" href="personen_uebersicht.html?_ijt=ihcs9erl13ub8ib4s3srabhbh2">Person</a>
+                <a class="nav-link text-dark" href="gruppen_uebersicht.html?_ijt=cgs3977lelm3to5j6q93vdo6if">Gruppe</a>
+                <a class="nav-link text-dark" href="orte_uebersicht.html">Ort</a>
+                <a class="nav-link text-dark" href="stundenplan_uebersicht.html">Stundenplan</a>
+                <a class="nav-link text-dark bg-light mt-4" href="#">Zurück</a>
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="row">
+                <div class="col-8">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">
+                            <h5 class="mb-0 text-muted">Bezeichnung</h5>
+                            <p class="anz-text">3AHIT<p>
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="mb-0 text-muted">Anzahl d. Mitglieder</h5>
+                            <p class="anz-text">27<p>
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="mb-0 text-muted">Verantwortlicher</h5>
+                            <p class="anz-text">Schöll, Barbara<p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col p-1">
+                            <a class="btn btn-warning h-100 w-100" href="#">Bearbeiten</a>
+                        </div>
+                        <div class="col p-1">
+                            <a class="btn btn-danger h-100 w-100" href="#">Löschen</a>
+                        </div>
+                        <div class="col p-1">
+                            <a class="btn btn-info h-100 w-100" href="#">Stundenplan</a>
+                        </div>
+                        <div class="col p-1">
+                            <a class="btn btn-primary h-100 w-100" href="#">Statistiken</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row">
+                    <h5>Mitglieder</h5>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill" width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card mb-3" style="max-width: 540px;">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <svg class="bi bi-person-fill " width="100%" height="100%" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+                                    </svg>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Vorname</h5>
+                                        <h5 class="card-title">Nachname</h5>
+                                    </div>
+                                </div>
+                                <a href="person_anzeigen.html" class="stretched-link"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Username  in the top right -->
+        <div class="col-2">
+            <button id="btnGroupDrop1" type="button" class="btn btn-light dropdown-toggle shadow p-3 mb-5 bg-white rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Benutzername
+            </button>
+            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <a class="dropdown-item" href="login.html">Abmelden</a>
+                <a class="dropdown-item" href="passwort_aendern.html">Passwort ändern</a>
+                <a class="dropdown-item" href="benutzer_anzeigen.html">Benutzer anzeigen</a>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
