--- a/person_bearbeiten.html
+++ b/person_bearbeiten.html
@@ -24,7 +24,7 @@
     <!-- Bootstrap Styling für die Select-Box-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-theme/0.1.0-beta.10/select2-bootstrap.min.css" rel="stylesheet">
 
-    <title>Person hinzufügen</title>
+    <title>Person bearbeiten</title>
 </head>
 <body>
 <!-- W3D on the top -->
